--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -7,10 +7,10 @@ all: rooter deadbeef badcoffee
 rooter: rooter.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
-deadbeef: deadbeef.cpp
+deadbeef: deadbeef.cpp mb_loop.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
-badcoffee: badcoffee.cpp
+badcoffee: badcoffee.cpp mb_loop.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
 clean:
