repair libs; add mol

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,10 +1,13 @@
 CC=g++
 CFLAGS=-Wall -Wextra
-ROOT=`root-config --cflags --libs`
+ROOT=`root-config --cflags` -L`root-config --libdir` -lCore -lTree -lRIO
 
-all: rooter deadbeef badcoffee
+all: rooter mol deadbeef badcoffee
 
 rooter: rooter.cpp
+	$(CC) $(CFLAGS) $(ROOT) $< -o $@
+
+mol: mol.cpp mb_loop.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
 deadbeef: deadbeef.cpp mb_loop.cpp
@@ -14,4 +17,4 @@ badcoffee: badcoffee.cpp mb_loop.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
 clean:
-	rm -f rooter deadbeef badcoffee
+	rm -f rooter mol deadbeef badcoffee
