accommodate move and rename

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -2,19 +2,16 @@ CC=g++
 CFLAGS=-Wall -Wextra
 ROOT=`root-config --cflags` -L`root-config --libdir` -lCore -lTree -lRIO
 
-all: rooter mol deadbeef badcoffee
+all: mol deadbeef badcoffee
 
-rooter: rooter.cpp
+mol: mol.cpp rooter.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
-mol: mol.cpp mb_loop.cpp
+deadbeef: deadbeef.cpp rooter.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
-deadbeef: deadbeef.cpp mb_loop.cpp
-	$(CC) $(CFLAGS) $(ROOT) $< -o $@
-
-badcoffee: badcoffee.cpp mb_loop.cpp
+badcoffee: badcoffee.cpp rooter.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
 clean:
-	rm -f rooter mol deadbeef badcoffee
+	rm -f mol deadbeef badcoffee
