add fed raw data

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -2,18 +2,19 @@ CC=g++
 CFLAGS=-Wall -Wextra
 ROOT=`root-config --cflags` -L`root-config --libdir` -lCore -lTree -lRIO
 SO=-shared -fPIC
-HS=CDFChunk.h CDFEventInfo.h CDFRunInfo.h cdf.h
+HS=CDFChunk.h CDFEventInfo.h CDFRunInfo.h cdf.h FEDRawData.h cms.h
+CXXS=FEDRawData.cc
 
 TMP=tmp.cpp
 RV=$(shell root-config --version | cut -c 1)
 ifeq ($(RV), 6)
-	RC=rootcling -f $(TMP) $(HS) LinkDef.h
+	RC=rootcling -f $(TMP) $(HS) CDFROOTLinkDef.h
 endif
 ifeq ($(RV), 5)
 	RC=rootcint -f $(TMP) -c $(HS) CDFROOTLinkDef.h
 endif
 
-all: mol deadbeef badcoffee cdf.so
+all: mol deadbeef badcoffee formats.so
 
 mol: mol.cpp rooter.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
@@ -24,9 +25,9 @@ deadbeef: deadbeef.cpp rooter.cpp
 badcoffee: badcoffee.cpp rooter.cpp
 	$(CC) $(CFLAGS) $(ROOT) $< -o $@
 
-cdf.so: $(HS)
+formats.so: $(HS) $(CXXS)
 	$(RC)
-	$(CC) $(CFLAGS) $(SO) $(ROOT) $(TMP) -o $@
+	$(CC) $(CFLAGS) $(SO) $(ROOT) $(CXXS) $(TMP) -o $@
 
 clean:
 	rm -f mol deadbeef badcoffee *.pcm *.d *.so $(TMP)
